--- a/index.html
+++ b/index.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
 <html>
-  <link rel="stylesheet" type="text/css" href="style.css">
-  <script src="javascript.js"></script>
-
+  <head>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <script type="text/javascript" src="javascript.js"></script>
+  </head>
   <div class = "page-selection">
     <div class = "home-button" role = "button" onclick = "Home()" ></div>
     <div class = "setup-button"></div>
     <div class = "recommend-button"></div>
+    epic gamer sauce
   </div>
 
 
 
 <body>
   <h1> <strong> THE PROJECTOR WEBSITE </b> </h1>
-  <div id = "home-page" class = "home-page" display: "none">
+  <div id = "home-page" class = "home-page" style = "display:block">
   <h1 style = "font-family:verdana; color: white; text-align: center;"> <b> HOW TO SET UP A PROJECTOR </b> </h1>
   <h1 style = "font-family:verdana; color: white; text-align: center; font-size: 150%;"> WITH IMAGES </h1>
   <!-- STEP ONE -->
