--- a/index.html
+++ b/index.html
@@ -5,17 +5,20 @@
     <script type="text/javascript" src="javascript.js"></script>
   </head>
   <div class = "page-selection">
-    <div class = "home-button" role = "button" onclick = "Home()" ></div>
-    <div class = "setup-button"></div>
-    <div class = "recommend-button"></div>
-    epic gamer sauce
+    <h1 class = "title"> THE PROJECTOR WEBSITE </h1>
+    <div class = "home-button" role = "button" onclick = "Home()">
+      <h1 class = "setup-text"> SETUP </h1> </div>
+    <div class = "setup-button">
+      <h1 class = "buy-text"> BUY </h1> </div>
+    <div class = "recommend-button">
+      <h1 class = "specs-text"> SPECS </h1> </div>
   </div>
 
 
 
 <body>
-  <h1> <strong> THE PROJECTOR WEBSITE </b> </h1>
-  <div id = "home-page" class = "home-page" style = "display:block">
+
+  <div id = "setup-page" class = "setup-page" style = "display:none">
   <h1 style = "font-family:verdana; color: white; text-align: center;"> <b> HOW TO SET UP A PROJECTOR </b> </h1>
   <h1 style = "font-family:verdana; color: white; text-align: center; font-size: 150%;"> WITH IMAGES </h1>
   <!-- STEP ONE -->
