--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
 
 <body>
   <div id = "home-page" class  = "home-page" style = "display:block">
-    <h1> Welcome to the Projector Website <h1>
-    <h1> On this website we have explanations of projector specifications, recommended projectors, and even a setup tutorial. <h1>
-    <h1> Dedicated to Russell Cleary, the only person weird enough to use a projector to play video games <h1>
+    <h1 class = "home-text"> Welcome to the Projector Website <h1>
+    <h1 class = "home-text"> On this website we have explanations of projector specifications, recommended projectors, and even a setup tutorial. <h1>
+    <h1 class = "home-text"> Dedicated to Russell Cleary, the only person weird enough to use a projector to play video games <h1>
   </div>
 
   <div id = "setup-page" class = "setup-page" style = "display:none">
     <h1 style = "font-family:verdana; color: white; text-align: center;"> <b> HOW TO SET UP A PROJECTOR </b> </h1>
     <h1 style = "font-family:verdana; color: white; text-align: center; font-size: 150%;"> WITH IMAGES </h1>
-      <h2><strong> FINDING THE RIGHT LOCATION </strong></h2>
+      <h2 style = "font-family:verdana; color: white;"><strong> 1. FINDING THE RIGHT LOCATION </strong></h2>
       <p style = "font-family:verdana; color: white;"> It's very important when setting up a projector that you consider
         the location you are putting it in. <br> A projector works <strong> best in dark rooms </strong> and should preferably be projecting against a
         <strong> flat white wall. </strong><br> If you are willing to spend a bit of extra money on a screen
@@ -62,7 +62,7 @@
     <a href="https://www.amazon.com/Mini-Projector-Smartphone-Compatible-Entertainment/dp/B07QMRRHPY/ref=sr_1_1_sspa?dchild=1&keywords=projector&qid=1599748883&sr=8-1-spons&psc=1&spLa=ZW5jcnlwdGVkUXVhbGlmaWVyPUFKS05WREFSRk9SMDQmZW5jcnlwdGVkSWQ9QTAxNjk0ODkyS0E5RFU5SFQwM0gmZW5jcnlwdGVkQWRJZD1BMDUwNDU4MlMyUTFTQ0kzNDlGUyZ3aWRnZXROYW1lPXNwX2F0ZiZhY3Rpb249Y2xpY2tSZWRpcmVjdCZkb05vdExvZ0NsaWNrPXRydWU=">
       <div class = "projectorList" id = "projectorList1">
         <img src = "100proj.jpg" alt = "budget projector" width = "250" height  = "175" />
-        <h1 class = "projdesc1"> $100 Dollar 1080p projector <h1>
+        <h1 class = "projdesc1"> $100 1080p budget projector <h1>
       </div>
     </a>
     <a href = "https://www.amazon.com/VAVA-Theatre-Projector-Lumens-Android/dp/B07XGM6YGQ/ref=sr_1_4?dchild=1&keywords=4k+projector&qid=1599748948&sr=8-4">
@@ -83,7 +83,7 @@
 
 
   <div id = "specs-page" class = "specs-page" style = "display:none">
-    <table width = 30%>
+    <table id = table class = "table">
       <tr>
         <th>Name</th>
         <th>Resolution</th>
