--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
   <div id = "setup-page" class = "setup-page" style = "display:none">
     <h1 style = "font-family:verdana; color: white; text-align: center;"> <b> HOW TO SET UP A PROJECTOR </b> </h1>
     <h1 style = "font-family:verdana; color: white; text-align: center; font-size: 150%;"> WITH IMAGES </h1>
-      <h2 style = "font-family:verdana; color: white;"><strong> 1. FINDING THE RIGHT LOCATION </strong></h2>
-      <p style = "font-family:verdana; color: white;"> It's very important when setting up a projector that you consider
+      <h2 class = "setup-titles"><strong> 1. FINDING THE RIGHT LOCATION </strong></h2>
+      <p class = "text"> It's very important when setting up a projector that you consider
         the location you are putting it in. <br> A projector works <strong> best in dark rooms </strong> and should preferably be projecting against a
         <strong> flat white wall. </strong><br> If you are willing to spend a bit of extra money on a screen
         to project onto, <strong> it can increase image quality and brightness </strong>, so it is highly recommended </p>
@@ -36,19 +36,19 @@
 
   <img src= "projector1.jpg" alt="projector in the dark on white wall" />
   <!-- STEP TWO -->
-  <h2 style = "font-family:verdana; color: white;"><strong> 2. FINDING THE RIGHT HEIGHT </strong></h2>
-  <p style = "font-family:verdana; color: white;"> There are a few ways to mount a projector, with the most common being:</p>
-  <ul style = "font-family:verdana; color: white;">
+  <h2 class = "setup-titles"><strong> 2. FINDING THE RIGHT HEIGHT </strong></h2>
+  <p class = "text"> There are a few ways to mount a projector, with the most common being:</p>
+  <ul class = "text">
     <li> Mounted on a table in front of the user </li>
     <li> Mounted high on the wall behind the user </li>
     <li> Mounted hanging from the ceiling </li>
   </ul>
-  <p style = "font-family:verdana; color: white;"> The simplest and safest way of mounting is on a table in front,
+  <p class = "text"> The simplest and safest way of mounting is on a table in front,
     so this is the method we recommend. <br> Generally the height that the projector is positioned
     at is the same height as the bottom of the projection (assuming it is flat on a table) </p>
-  <h2 style = "font-family:verdana; color: white;"><strong> 3. PLUGGING IT IN </strong></h2>
-  <p style = "font-family:verdana; color: white;"> There is likely only 3 potential cables you would need to plug into your projector. </p>
-  <ol style = "font-family:verdana; color: white;">
+  <h2 class = "setup-titles"><strong> 3. PLUGGING IT IN </strong></h2>
+  <p class = "text"> There is likely only 3 potential cables you would need to plug into your projector. </p>
+  <ol class = "text">
     <li> The power cable for the projector </li>
     <li> The cable for a disk reader if you want one </li>
     <li> The HDMI cable from your laptop or desktop </li>
@@ -67,13 +67,13 @@
     </a>
     <a href = "https://www.amazon.com/VAVA-Theatre-Projector-Lumens-Android/dp/B07XGM6YGQ/ref=sr_1_4?dchild=1&keywords=4k+projector&qid=1599748948&sr=8-4">
       <div class = "projectorList" id = "projectorList2">
-        <img src = "fancyproj.png" alt = "4k  projector" width = "250" height  = "175" />
+        <img src = "fancyproj.png" alt = "4k projector" width = "250" height  = "175" />
         <h1 class = "projdesc1"> $2799 Home Theatre 4k Projector <h1>
       </div>
     </a>
     <a href = "https://www.amazon.com/Optoma-Projector-Response-Enhanced-Refresh/dp/B084YH1L36/ref=sr_1_1_sspa?dchild=1&keywords=4k+projector&qid=1599749330&sr=8-1-spons&psc=1&spLa=ZW5jcnlwdGVkUXVhbGlmaWVyPUEzOUI4T1g4VE1ER0xXJmVuY3J5cHRlZElkPUEwMjEyNzk5MjZBSjlPQllCUkRKOCZlbmNyeXB0ZWRBZElkPUEwNTMxMDA3MUo3RU9EMDNQMkZLUiZ3aWRnZXROYW1lPXNwX2F0ZiZhY3Rpb249Y2xpY2tSZWRpcmVjdCZkb05vdExvZ0NsaWNrPXRydWU=">
     <div class = "projectorList" id = "projectorList3">
-      <img src = "gameproj.png" alt = "4k  projector" width = "250" height  = "175" />
+      <img src = "gameproj.png" alt = "gaming projector" width = "250" height  = "175" />
       <h1 class = "projdesc1"> $1299 240hz Gaming projector <h1>
     </div>
   </a>
