--- a/index.html
+++ b/index.html
@@ -1,29 +1,86 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <link rel="stylesheet" type="text/css" href="style.css">
     <script type="text/javascript" src="javascript.js"></script>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <style>
+  .carousel-inner img {
+    width: 50%;
+    height: 100%;
+    margin-left:25%;
+  }
+  </style>
   </head>
-  <div class = "page-selection" id = "page-selection">
-    <h1 class = "title" role = "button" onclick = "home()"> THE PROJECTOR WEBSITE </h1>
-    <div class = "setup-button" role = "button" onclick = "setup()" id = "page-button1">
-      <h1 class = "setup-text"> SETUP </h1> </div>
-    <div class = "buy-button" role = "button" onclick = "buy()" id = "page-button2">
-      <h1 class = "buy-text"> BUY </h1> </div>
-    <div class = "specs-button" id = "page-button3" role = "button" onClick = "specs()">
-      <h1 class = "specs-text"> SPECS </h1> </div>
-    <div class = "color-button" id = "color-button" role = "button" onClick = "changeColor()"></div>
+  <body>
+
+<nav class="navbar bg-dark navbar-dark">
+  <a class="navbar-brand" href="#">Navbar</a>
+  <div class="spinner-border text-primary"></div>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="collapsibleNavbar">
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <h1 class = "setup-texts" role = "button" onclick = "setup()" id = "page-button11"> SETUP </h1>
+      </li>
+      <li class="nav-item">
+        <h1 class = "buy-texts" role = "button" onclick = "buy()" id = "page-button21"> BUY </h1>
+      </li>
+      <li class="nav-item">
+        <h1 class = "specs-texts" role = "button" onClick = "specs()" id = "page-button31"> SPECS </h1>
+      </li>
+      <li class="nav-item dropdown">
+      <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
+        Dark/Light Mode
+      </a>
+      <div class="dropdown-menu">
+        <h1 class = "color-text" role = "button" onClick = "changeColor1()" id = "color-button1"> LIGHT </h1>
+        <h1 class = "color-text" role = "button" onClick = "changeColor2()" id = "color-button2"> DARK </h1>
+      </div>
+    </ul>
   </div>
+</nav>
 
-
-
-<body>
-  <div id = "home-page" class  = "home-page" style = "display:block">
-    <h1 class = "home-text"> Welcome to the Projector Website <h1>
-    <h1 class = "home-text"> On this website we have explanations of projector specifications, recommended projectors, and even a setup tutorial. <h1>
-    <h1 class = "home-text"> Dedicated to Russell Cleary, the only person weird enough to use a projector to play video games <h1>
+    <div id = "home-page" style = "display:block;">
+    <div class = "row">
+        <div class = "col-lg-4 col-md-2">
+              <h1 class = "home-text"> Welcome to the Projector Website <h1>
+          </div>
+          <div class = "col-lg-4 col-md-6">
+              <h1 class = "home-text"> On this website we have explanations of projector specifications, recommended projectors, and even a setup tutorial. <h1>
+          </div>
+      <div class = "col-lg-4 col-md-4">
+          <h1 class = "home-text"> Dedicated to Russell Cleary, the only person weird enough to use a projector to play video games <h1>
+      </div>
+    </div>
+    <div id="carousel" class="carousel slide" data-ride="carousel">
+      <ul class="carousel-indicators">
+        <li data-target="#carousel" data-slide-to="0" class="active"></li>
+        <li data-target="#carousel" data-slide-to="1"></li>
+        <li data-target="#carousel" data-slide-to="2"></li>
+      </ul>
+      <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="proj1.jpg" alt="projector1" width="1100" height="500">
+      </div>
+      <div class="carousel-item">
+        <img src="proj2.jpg" alt="projector2" width="1100" height="500">
+      </div>
+      <div class="carousel-item">
+        <img src="proj3.jpeg" alt="projector3" width="1100" height="500">
+      </div>
+    </div>
   </div>
-
+  </div>
+  <div class = "row">
+  <div class = "col-lg-6 col-md-10 col-sm-12">
   <div id = "setup-page" class = "setup-page" style = "display:none">
     <h1 style = "font-family:verdana; color: white; text-align: center;"> <b> HOW TO SET UP A PROJECTOR </b> </h1>
     <h1 style = "font-family:verdana; color: white; text-align: center; font-size: 150%;"> WITH IMAGES </h1>
@@ -34,7 +91,7 @@
         to project onto, <strong> it can increase image quality and brightness </strong>, so it is highly recommended </p>
   <!-- STEP ONE -->
 
-  <img src= "projector1.jpg" alt="projector in the dark on white wall" />
+  <img src= "gameproj.png" alt="projector in the dark on white wall" />
   <!-- STEP TWO -->
   <h2 class = "setup-titles"><strong> 2. FINDING THE RIGHT HEIGHT </strong></h2>
   <p class = "text"> There are a few ways to mount a projector, with the most common being:</p>
@@ -54,6 +111,8 @@
     <li> The HDMI cable from your laptop or desktop </li>
   <h2>
   </div>
+  </div>
+  </div>
 
 
 
@@ -61,19 +120,23 @@
   <div id = "buy-page" class = "buy-page" style = "display:none">
     <a href="https://www.amazon.com/Mini-Projector-Smartphone-Compatible-Entertainment/dp/B07QMRRHPY/ref=sr_1_1_sspa?dchild=1&keywords=projector&qid=1599748883&sr=8-1-spons&psc=1&spLa=ZW5jcnlwdGVkUXVhbGlmaWVyPUFKS05WREFSRk9SMDQmZW5jcnlwdGVkSWQ9QTAxNjk0ODkyS0E5RFU5SFQwM0gmZW5jcnlwdGVkQWRJZD1BMDUwNDU4MlMyUTFTQ0kzNDlGUyZ3aWRnZXROYW1lPXNwX2F0ZiZhY3Rpb249Y2xpY2tSZWRpcmVjdCZkb05vdExvZ0NsaWNrPXRydWU=">
       <div class = "projectorList" id = "projectorList1">
-        <img src = "100proj.jpg" alt = "budget projector" width = "250" height  = "175" />
+        <img src = "cheapproj.png" class = "rounded-circle" alt = "budget projector" width = "250" height  = "175" />
+        <span class="badge badge-success">BUDGET</span>
         <h1 class = "projdesc1"> $100 1080p budget projector <h1>
+
       </div>
     </a>
     <a href = "https://www.amazon.com/VAVA-Theatre-Projector-Lumens-Android/dp/B07XGM6YGQ/ref=sr_1_4?dchild=1&keywords=4k+projector&qid=1599748948&sr=8-4">
       <div class = "projectorList" id = "projectorList2">
-        <img src = "fancyproj.png" alt = "4k projector" width = "250" height  = "175" />
+        <img src = "4kproj.png" class = "rounded-circle" alt = "4k projector" width = "250" height  = "175" />
+        <span class="badge badge-success">HIGHEST QUALITY</span>
         <h1 class = "projdesc1"> $2799 Home Theatre 4k Projector <h1>
       </div>
     </a>
     <a href = "https://www.amazon.com/Optoma-Projector-Response-Enhanced-Refresh/dp/B084YH1L36/ref=sr_1_1_sspa?dchild=1&keywords=4k+projector&qid=1599749330&sr=8-1-spons&psc=1&spLa=ZW5jcnlwdGVkUXVhbGlmaWVyPUEzOUI4T1g4VE1ER0xXJmVuY3J5cHRlZElkPUEwMjEyNzk5MjZBSjlPQllCUkRKOCZlbmNyeXB0ZWRBZElkPUEwNTMxMDA3MUo3RU9EMDNQMkZLUiZ3aWRnZXROYW1lPXNwX2F0ZiZhY3Rpb249Y2xpY2tSZWRpcmVjdCZkb05vdExvZ0NsaWNrPXRydWU=">
     <div class = "projectorList" id = "projectorList3">
-      <img src = "gameproj.png" alt = "gaming projector" width = "250" height  = "175" />
+      <img src = "gameproj.png" class = "rounded-circle" alt = "gaming projector" width = "250" height  = "175" />
+      <span class="badge badge-success">BEST VALUE</span>
       <h1 class = "projdesc1"> $1299 240hz Gaming projector <h1>
     </div>
   </a>
